@@ -3,6 +3,7 @@
 - fixed the Preferences menu entry in catalogs manager
 - fixed to handle file references with Windows paths on Unix
 - fixed the "failed to convert to unicode" bug when saving (#1589744)
+- [OS X] fixed clicking on PO files in Finder (#1583967)
 - added more translations:
      Urdu (Muhammad Shakir Aziz)
 
